syntax = "proto3";

package com.mikai233.aoi;

import "test.proto";

message SC_MSG{
  TestResp test_resp = 1;
  LoginResp login_resp = 2;
  SCPlayerMoveNotify sc_player_move_notify = 3;
}